Agregado unit_cost al modelo de product - Dashboard muestra valor total del inventario

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,8 @@
     "build": "echo 'No build step required'",
     "init-db": "node scripts/init-db.js",
     "create-admin": "node scripts/create-admin.js",
+    "add-unit-cost": "node scripts/add-unit-cost-to-db.js",
+    "add-unit-cost-prod": "node scripts/add-unit-cost-production.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
